<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    android:padding="@dimen/appbar_padding"
    tools:context=".Submit"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center"
        android:textSize="22dp"
        android:padding="@dimen/appbar_padding"
        android:textColor="@color/colorYellow"
        android:background="@drawable/title_shape_submit"
        android:text="@string/project_submission_name"/>

    <EditText
        android:id="@+id/fName"
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:layout_marginLeft="@dimen/main_margin"
        android:layout_marginTop="150dp"
        android:padding="@dimen/appbar_padding"
        android:hint="@string/first_name" />

    <EditText
        android:id="@+id/lName"
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:layout_marginLeft="@dimen/main_margin"
       android:layout_toEndOf="@id/fName"
        android:layout_toRightOf="@id/fName"
        android:layout_marginTop="150dp"
        android:padding="@dimen/appbar_padding"
        android:hint="@string/last_name" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:layout_marginLeft="@dimen/main_margin"
        android:layout_marginTop="250dp"
        android:padding="@dimen/appbar_padding"
        android:hint="@string/email_address" />
    <EditText
        android:id="@+id/link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:layout_marginLeft="@dimen/main_margin"
        android:layout_marginTop="350dp"
        android:padding="@dimen/appbar_padding"
        android:hint="@string/project_on_github_link" />

    <Button
        android:id="@+id/submit_data"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:layout_marginLeft="120dp"
        android:background="@drawable/button_shape_submit"
        android:textColor="@color/cardview_light_background"
        android:text="Submit"/>


</RelativeLayout>